# urban-mobility-data-lakehouse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: logging.yaml  pipeline.yaml
data/warehouse/: analytics.duckdb
docs/: architecture_diagram_placeholder.md  data_dictionary.md  project_summary.md
docs/screenshots/: pipeline_run_placeholder.md
scripts/: bootstrap_project.py  download_data.py  load_duckdb.py  run_pipeline.py
sql/: example_queries.sql  gold_borough_hour_demand.sql  gold_daily_trip_summary.sql  gold_payment_type_revenue.sql
src/: __init__.py  config.py  exceptions.py  logging_utils.py
src/bronze/: __init__.py  write_bronze_table.py
src/extract/: download_taxi_data.py  ingest_taxi_data.py
src/gold/: write_gold_tables.py
src/silver/: write_silver_table.py
src/transform/: add_metadata.py  bronze_to_silver.py  bronze_to_silver_cleaning.py  silver_to_gold.py  silver_to_gold_aggregations.py  silver_to_gold_py
src/utils/: dates.py  paths.py
src/validate/: bronze_checks.py  gold_checks.py  schema_validator.py  silver_checks.py
src/warehouse/: build_duckdb_marts.py  load_gold_into_duckdb.py
tests/: test_add_metadata.py  test_bootstrap.py  test_bronze_to_silver_cleaning.py  test_config.py  test_load_gold_into_duckdb.py  test_paths.py  test_schema_validator.py  test_silver_to_gold_aggregations.py  test_write_bronze_table.py  test_write_gold_tables,py
